AWS EKS/06-AWS_Load_Balancer_Controller/AWS Load Balancer Controller in EKS/example-3/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: 7-example
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
  selector:
    app: myapp
